--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@notionhq/client": "^2.2.3",
+    "@prisma/client": "^4.8.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -24,7 +25,8 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "prisma": "^4.8.0"
   },
   "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
