--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "next-sitemap",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,6 +21,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
@@ -28,6 +30,7 @@
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
+    "next-sitemap": "^3.1.43",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prisma": "^4.8.0",
