--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@next/font": "13.1.1",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.8.0",
-    "@types/node": "18.11.18",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "draft-js": "^0.11.7",
@@ -38,7 +38,8 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prisma": "^4.8.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   },
   "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
