--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "types": ["@emotion/react/types/css-prop"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "compilerOptions": { "module": "CommonJS", "types": ["node"] }
+  }
 }
