--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "13.1.1",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.8.0",
+    "@tabler/icons": "^1.118.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
