--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.8.0",
     "@tabler/icons": "^1.118.0",
+    "@tanstack/react-query": "^4.20.4",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
