--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "13.1.1",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.8.0",
+    "@react-oauth/google": "^0.5.1",
     "@tabler/icons": "^1.118.0",
     "@tanstack/react-query": "^4.20.4",
     "@types/node": "^18.11.18",
@@ -25,6 +26,7 @@
     "draft-js": "^0.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.1",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
