--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mantine/core": "^5.9.5",
     "@mantine/hooks": "^5.9.5",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@notionhq/client": "^2.2.3",
     "@prisma/client": "^4.8.0",
@@ -28,6 +29,7 @@
     "eslint-config-next": "13.1.1",
     "jwt-decode": "^3.1.2",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
