--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
